# shuffle_playlist

./: .pre-commit-config.yaml  README.md  audio.py  meta.py  playlists.py  pyproject.toml  setup.cfg  setup.py  shuffle_playlist.py  shuffle_playlist.spec  utils.py
shuffle_playlist/: __main__.py  audio.py  playlists.py  utils.py
shuffle_playlist/tests/: test_audio_mod.py  test_playlist_mod.py
src/shuffle_playlist/: __init__.py  audio.py
