[build-system]
requires = ["flit_core >=3.42,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "foobar"
dynamic = ["version", "description"]
authors = [{name = "John Russell", email = "johndevlopment7@gmail.com"}]
classifiers = [
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
]
dependencies = ["mutagen>=1.46.0"]

[project.urls]
Home = "https://github.com/JohnDevlopment/shuffle_playlist"
"Bug Tracker" = "https://github.com/JohnDevlopment/shuffle_playlist/issues"
