[tool.poetry]
name = "shuffle-playlist"
version = "1.0a2"
description = "Create a playlist where the files are shuffled around."
authors = ["JohnDevlopment <50782633+JohnDevlopment@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
mutagen = ">=1.46.0"
requests = ">=2.28.2"
soundfile = "^0.12.1"

[tool.poetry.group.dev.dependencies]
build = ">=0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
