[tool.poetry]
name = "shuffle-playlist"
version = "1.0a3"
description = "Create a playlist where the files are shuffled around."
authors = ["JohnDevlopment <50782633+JohnDevlopment@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
mutagen = ">=1.46.0"
requests = ">=2.28.2"
soundfile = "^0.12.1"
jsnake = {path = "jsnake-0.1-py3-none-any.whl"}

[tool.poetry.group.dev.dependencies]
build = ">=0.10.0"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
