[metadata]
name = shuffle_playlist
version = attr: shuffle_playlist.__version__
license = MIT
license_file = LICENSE
description = Creates a shuffled m3u playlist from the files provided
long_description = file: README.md
url = https://github.com/JohnDevlopment/shuffle_playlist
author = John Russell
author_email = johndevlopment7@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
package_include_data = True
packages = find:
install_requires =
    mutagen>="1.46.0"

[options.entry_points]
console_scripts =
    shuffle_playlist=shuffle_playlist.__main__:main